--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-</head>
+<title>Animals</title>
+</head>Top 2 Favorite animals
 <body>
 
 <h1>This is a Heading</h1>
