--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>Animals</title>
-</head>Top 2 Favorite animals
+</head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Top 2 Favorite animals</h1>
 <p>This is a paragraph.</p>
 
 </body>
