--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Mia's top 2 animals</title>
+  <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+    </style>
 </head>
 <body>
 
