--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Mia's top 2 animals</title>
   <style>
-body {background-color: powderblue;}
+body {background-color:rgb(241, 255, 250);}
 h1   {color: blue;}
 p    {color: red;}
     </style>
