--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Mia's top 2 animals</title>
   <style>
 body {background-color:rgb(241, 255, 250);}
-h1   {color: blue;}
+h1   {color: rgb(147, 183, 190);}
 p    {color: red;}
     </style>
 </head>
