--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
 body {background-color:rgb(241, 255, 250);}
 h1   {color: rgb(147, 183, 190);}
-p    {color: red;}
+h2   {color: rgb(69, 69, 69);}
     </style>
 </head>
 <body>
