--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ h2   {color: rgb(147, 183, 190);}
 
 <h1>Top 2 Favorite animals</h1>
 <h2>1. Anteaters!</h2>
-<img src="anteater.jpg" alt="anteater" width="500" height="333">
+<img src="anteater.jpg" alt="anteater walking" width="500" height="333">
 <p>image credits go to the<a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank">potawatomi zoo website</a></p>
 
 <h2>2.Pandas!</h2>
-<img src="" alt="anteater" width="500" height="333">
+<img src="panda.webp" alt="panda eating bamboo looking at camera" width="500" height="333">
 
 </body>
 </html>
