--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 body {background-color:rgb(241, 255, 250);}
 h1   {color: rgb(69, 69, 69);}
 h2   {color: rgb(147, 183, 190);}
+p    {color. rgb(213, 199, 188);} 
+    
     </style>
 </head>
 <body>
