--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
 body {background-color:rgb(241, 255, 250);}
 h1   {text-align:center; font-family:Brush Script MT; color: rgb(69, 69, 69);}
-h2   {color: rgb(147, 183, 190);}
+h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
     
     </style>
