--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ p    {color: rgb(213, 199, 188);}
 <h1><b></b>Top 2 Favorite animals</b></h1>
 <h2><style>
 .right {
-  float: right;
+ <!-- float: right;
+  width: 300px;
+  border: 3px solid #73AD21;
+  padding: 10px; -->
 }
 </style>1. Anteaters!</h2>
 <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
