--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
 body {background-color:rgb(241, 255, 250);}
 h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69);}
-h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
+h2   {float: right; font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
     
     </style>
@@ -13,11 +13,7 @@ p    {color: rgb(213, 199, 188);}
 <body>
 
 <h1><b></b>Top 2 Favorite animals</b></h1>
-<h2><style>
-.right {
-  float: right;
-}
-</style>1. Anteaters!</h2>
+<h2>1. Anteaters!</h2>
 <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
 <p><i></i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank">Potawatomi zoo website</a>.</i></p>
 
