--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ p    {color: rgb(213, 199, 188);}
 <body>
 
 <h1><b></b>Top 2 Favorite animals</b></h1>
-<h2>1. Anteaters!</h2>
+<h2><style>float: left;</style>1. Anteaters!</h2>
 <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
 <p><i></i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank">Potawatomi zoo website</a>.</i></p>
 
