--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ p    {color: rgb(213, 199, 188);}
   padding: 10px;
 }
 .left {
-  float: right;
+  float: left;
   width: 300px;
   padding: 10px;
 }
