--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ p    {color: rgb(213, 199, 188);}
 <body>
 
 
-<h1><b></b>Top 2 Favorite animals</b></h1>
+<h1><
+  style>{p.solid {border-style: solid;}</style>
+  <b></b>Top 2 Favorite animals</b></h1>
 
 <div class="left">
   <h2>1. Anteaters!</h2>
