--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@ p    {color: rgb(213, 199, 188);}
 </head>
 <body>
 
-
-<h1><
-  style>{p.solid {border-style: solid;}</style>
-  <b></b>Top 2 Favorite animals</b></h1>
+<style>{p.solid {border-style: solid;}</style>
+<h1><b></b>Top 2 Favorite animals</b></h1>
 
 <div class="left">
   <h2>1. Anteaters!</h2>
