--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Mia's top 2 animals</title>
   <style>
 body {background-color:rgb(241, 255, 250);}
-h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69);}
+h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69); p.solid {border-style: solid;}
 h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
 .right {
@@ -21,7 +21,7 @@ p    {color: rgb(213, 199, 188);}
 </head>
 <body>
 
-<style>{p.solid {border-style: solid;}</style>
+  
 <h1><b></b>Top 2 Favorite animals</b></h1>
 
 <div class="left">
