--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Mia's top 2 animals</title>
   <style>
 body {background-color:rgb(241, 255, 250);}
-h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69); p.solid {border-style: solid;}
+p.solid {border-style: solid;}
+h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69);}
 h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
 .right {
