--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <title>Mia's top 2 animals</title>
   <style>
 body {background-color:rgb(241, 255, 250);}
-p.solid {border-style: solid;}
-h1   {text-align:center; font-family: 'Courier New', monospace; color: rgb(69, 69, 69);}
+h1   {font-family: 'Courier New', monospace; color: rgb(69, 69, 69);}
 h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
+.center {
+  text-align: center;
+  border: 2px solid black;
+  outline: #4CAF50 solid 10px;
+  margin: auto;  
+  padding: 20px;
+}
 .right {
   float: right;
   width: 600px;
