--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p    {color: rgb(213, 199, 188);}
 .center {
   text-align: center;
   border: 2px solid black;
-  outline: #4CAF50 solid 10px;
+  outline: #8aa2a9 solid 10px;
   margin: auto;  
   padding: 20px;
 }
