--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ p    {color: rgb(213, 199, 188);}
 </head>
 <body>
 
-  
-<h1><b></b>Top 2 Favorite animals</b></h1>
+<div class="center">
+  <h1><b></b>Top 2 Favorite animals</b></h1>
+</div>
 
 <div class="left">
   <h2>1. Anteaters!</h2>
