--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@ p    {color: rgb(213, 199, 188);}
 .right {
   float: right;
   width: 600px;
+  border: 3px solid #8aa2a9;
   padding: 10px;
 }
 .left {
   float: left;
   width: -100px;
+  border: 3px solid #8aa2a9;
   padding: -10px;
 }
     </style>
