--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ p    {color: rgb(213, 199, 188);}
 .center {
   text-align: center;
   border: 2px solid black;
+  background: #b9c7cb;
   outline: #8aa2a9 solid 10px;
   margin: auto;  
   padding: 20px;
