--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ p    {color: rgb(213, 199, 188);}
 <body>
 
 <div class="center">
-  <h1><b></b>Top 2 Favorite animals</b></h1>
+  <h1><b></b>Top 2 Favorite Animals</b></h1>
 </div>
 
 <div class="left">
