--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ p    {color: rgb(213, 199, 188);}
 <div class="left">
   <h2>1. Anteaters!</h2>
   <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
-  <p><i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank" text-color: #b9c7cb;>Potawatomi zoo website</a>.</i></p>
+  <p><i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank" color:rgb(185, 199, 203);>Potawatomi zoo website</a>.</i></p>
 </div>
 
   
