--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ p    {color: rgb(213, 199, 188);}
   width: -1000px;
   padding: 10px;
 }
+a {
+  color:rgb(185, 199, 203);
+}
     </style>
 </head>
 <body>
@@ -35,7 +38,7 @@ p    {color: rgb(213, 199, 188);}
 <div class="left">
   <h2>1. Anteaters!</h2>
   <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
-  <p><i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank" color:rgb(185, 199, 203);>Potawatomi zoo website</a>.</i></p>
+  <p><i>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank">Potawatomi zoo website</a>.</i></p>
 </div>
 
   
