--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@ p    {color: rgb(213, 199, 188);}
   width: -1000px;
   padding: 10px;
 }
-a {
+a:link {
   color:rgb(185, 199, 203);
+}
+a:visited {
+  color:rgb(126, 152, 160);
+}
+a:hover {
+  color:rgb(104, 161, 143);
 }
     </style>
 </head>
