--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p    {color: rgb(213, 199, 188);}
 }
 .left {
   float: left;
-  width: -1000px;
+  width: 300px;
   padding: 10px;
 }
 a:link {
@@ -38,7 +38,7 @@ a:hover {
 <body>
 
 <div class="center">
-  <h1><b></b>Top 2 Favorite Animals</b></h1>
+  <h1><b>Top 2 Favorite Animals</b></h1>
 </div>
 
 <div class="left">
