--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mia's top 2 animals</title>
+<title>Animals</title>
   <style>
 body {background-color:rgb(241, 255, 250);}
 h1   {font-family: "papyrus", fantasy; font-size:50px; color: rgb(69, 69, 69);}
