--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ p    {color: rgb(213, 199, 188);}
 </head>
 <body>
 
-  <h1><b>Top<sup>two</sup>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
+  <h1><b>Top<sub>two</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
 
   <h2>1. Anteaters!</h2>
   <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
