--- a/index.html
+++ b/index.html
@@ -2,15 +2,37 @@
 <html>
 <head>
 <title>Animals</title>
+
+  
   <style>
 body {background-color:rgb(241, 255, 250);}
 h1   {font-family: "papyrus", fantasy; font-size:50px; color: rgb(69, 69, 69);}
 h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
+  .center {
+  text-align: center;
+  border: 2px solid black;
+  outline: #8aa2a9 solid 10px;
+  margin: auto;  
+  padding: 20px;
+}
+.right {
+  float: right;
+  width: 600px;
+  padding: 10px;
+}
+.left {
+  float: left;
+  width: 600px;
+  padding: 10px;
+}
     </style>
+
+  
 </head>
 <body>
 
+  
   <h1><b>Top<sub>two</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
 
   <h2>1. Anteaters!</h2>
