--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   
   <style>
+p.solid {border-style: solid;}
 body {background-color:rgb(241, 255, 250);}
 h1   {font-family: "papyrus", fantasy; font-size:50px; color: rgb(69, 69, 69);}
 h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
