--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ p    {color: rgb(213, 199, 188);}
 </head>
 <body>
 
-  
+  <div class="center">
   <h1><b>Top<sub>two</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
+  </div>
 
   <h2>1. Anteaters!</h2>
   <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
