--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190);}
 p    {color: rgb(213, 199, 188);} 
   .center {
   text-align: center;
-  p.double: outline-style: double;
+  outline-style: double;
   outline: #8aa2a9 solid 10px;
   margin: auto;  
   padding: 20px;
