--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 p.solid {border-style: solid;}
 body {background-color:rgb(241, 255, 250);}
 h1   {font-family: "papyrus", fantasy; font-size:50px; color: rgb(69, 69, 69);}
-h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190); text-decoration-line: overline;}
+h2   {font-family: 'Times New Roman', serif; color: rgb(147, 183, 190); text-decoration-line: overline; text-decoration-color: #56876D;}
 p    {color: rgb(213, 199, 188);} 
   .center {
   text-align: center;
