--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@ p    {color: rgb(213, 199, 188);}
   width: 600px;
   padding: 10px;
 }
+a:link {
+  color:rgb(185, 199, 203);
+}
+a:visited {
+  color:rgb(126, 152, 160);
+}
+a:hover {
+  color:rgb(192, 216, 208);
+}
     </style>
 
   
