--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@ p    {color: rgb(213, 199, 188);}
   .center {
   text-align: center;
   border: 2px solid black;
-  outline-style: double;
   outline: #8aa2a9 solid 10px;
   margin: auto;  
   padding: 20px;
+}
+p.double {
+  border-style: double;
 }
 .right {
   float: right;
@@ -44,7 +46,7 @@ a:hover {
 <body>
 
   <div class="center">
-  <h1><b>Top<sub>two</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
+  <h1 class="double"><b>Top<sub>two</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
   </div>
 
   <div class="left">
