--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ p    {color: rgb(213, 199, 188);}
   margin: auto;  
   padding: 20px;
 }
-p.double {
+h1.double {
   border-style: double;
 }
 .right {
