--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1   {
   font-family: "papyrus", fantasy; 
   font-size:50px; 
   color: rgb(69, 69, 69);
-  text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 4px rgb(213, 199, 188);
 }
     
 h2   {
