--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ h1.double {
     
 .img-container {
   float: left;
-  width: 600px;
-  padding: 10px;
+  width: 33.33%;
+  padding: 5px;
 }
 
 .clearfix::after {
