--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="responsive1">
  <div class="center">
 	  <div id="example1">
-		<h1 <!--class="double">--><b><sup>My</sup>top<sub>four</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
+		<h1><b><sup>My</sup>top<sub>four</sub>Favorite<sup>Animals</sup>by<sub>Mia</sub>Garcia</b></h1>
 	  </div>
 	  </div>
  </div>
@@ -19,7 +19,6 @@
 	  <div class="gallery">
 		<h2>1. Anteaters!</h2>
 		  <img src="anteater.jpg" alt="anteater walking" width="500" height="333">
-		</a>
 		<div class="desc"><i><b>image credits go to the <a href="https://www.potawatomizoo.org/animal/giant-anteater/" target="_blank">Potawatomi zoo website</a>.</b></i></div>
 	  </div>
 	</div>
