--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Animals</title>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -47,7 +47,7 @@
 	  </div>
 	</div>
 
-	<div class="clearfix">
+	<div class="clearfix"></div>
   
 </body>
 </html>
